fix: remove duplicated sting literals and unused imports from some workout files